--- a/consultation/templates/consultation/index.html
+++ b/consultation/templates/consultation/index.html
@@ -22,7 +22,7 @@
 
         document.querySelector('#room-name-submit').onclick = function (e) {
             var roomName = document.querySelector('#room-name-input').value;
-            window.location.pathname = '/chat/' + roomName + '/';
+            window.location.pathname = '/api/v1/consultation/' + roomName + '/';
         };
     </script>
 </body>
