--- a/consultation/templates/consultation/room.html
+++ b/consultation/templates/consultation/room.html
@@ -11,16 +11,17 @@
     <textarea id="chat-log" cols="100" rows="20"></textarea><br>
     <input id="chat-message-input" type="text" size="100"><br>
     <input id="chat-message-submit" type="button" value="Send">
-    {{ room_name|json_script:"room-name" }}
+    {{room_name |json_script:"roomName" }}
     <script>
-        const appointment_chat_id = JSON.parse(document.getElementById('room-name').textContent);
+        const consultation_chat_id = JSON.parse(document.getElementById('roomName').textContent);
 
         const chatSocket = new WebSocket(
             'ws://'
             + window.location.host
-            + '/ws/appointment_chat_id/'
-            + roomName
-            + '/'
+            + '/consultation/'
+            + 1
+            + '/',
+
         );
 
         chatSocket.onmessage = function (e) {
