--- a/consultation/templates/consultation/room.html
+++ b/consultation/templates/consultation/room.html
@@ -11,9 +11,9 @@
     <textarea id="chat-log" cols="100" rows="20"></textarea><br>
     <input id="chat-message-input" type="text" size="100"><br>
     <input id="chat-message-submit" type="button" value="Send">
-    {{room_name |json_script:"roomName" }}
+    {{room_name |json_script:"room-name" }}
     <script>
-        const consultation_chat_id = JSON.parse(document.getElementById('roomName').textContent);
+        const consultation_chat_id = JSON.parse(document.getElementById('room-name').textContent);
 
         const chatSocket = new WebSocket(
             'ws://'
